# MalDiff

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg-configuration.json  vcpkg.json
include/cli/: CliHandler.hpp
include/common/: ErrorHandling.hpp  Types.hpp
include/config/: ConfigManager.hpp
include/core/: Application.hpp
include/logging/: Logger.hpp
include/models/: AnalysisStatus.hpp  BinaryType.hpp  HashInfo.hpp  Metadata.hpp  Sample.hpp
include/pipeline/: BinaryLoader.hpp  FileValidator.hpp  HashEngine.hpp  LoadedBinary.hpp  MagicDetector.hpp  MetadataExtractor.hpp  SampleManager.hpp
include/storage/: StorageManager.hpp
include/utils/: FileUtils.hpp  Stringutils.hpp
src/: CMakeLists.txt  main.cpp
src/cli/: CliHandler.cpp
src/config/: ConfigManager.cpp
src/core/: Application.cpp
src/logging/: Logger.cpp
src/models/: AnalysisStatus.cpp
src/pipeline/: BinaryLoader.cpp  FileValidator.cpp  HashEngine.cpp
src/utils/: FileUtils.cpp  StringUtils.cpp
tests/: CMakeLists.txt  test_config_manager.cpp  test_sample.cpp  test_storage_manager.cpp  test_string_utils.cpp
